--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "redis": "^2.8.0",
     "swagger-jsdoc": "^3.2.9",
-    "swagger-ui-express": "^4.0.5"
+    "swagger-ui-express": "^4.0.5",
+    "keycloak-connect": "4.8.3"
   }
 }
