--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node ./server.js",
-    "build": "echo \"Building....\" && exit 0"
+    "build": "mkdir -p dist && rm -rf dist/* && cp -Rf app config node_modules package.json server.js dist/ && exit 0"
   },
   "author": "cb",
   "license": "ISC",
@@ -19,5 +19,10 @@
     "swagger-jsdoc": "^3.2.9",
     "swagger-ui-express": "^4.0.5",
     "keycloak-connect": "4.8.3"
+  },
+  "devDependencies": {
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-node-externals": "^1.7.2"
   }
 }
