--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "async-redis": "^1.1.7",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "keycloak-connect": "4.8.3",
     "redis": "^2.8.0",
     "swagger-jsdoc": "^3.2.9",
-    "swagger-ui-express": "^4.0.5",
-    "keycloak-connect": "4.8.3"
+    "swagger-ui-express": "^4.0.5"
   },
   "devDependencies": {
     "webpack": "^4.35.0",
