Fixed typo in generator-config

--- a/config/generatorconfig.json
+++ b/config/generatorconfig.json
@@ -40,7 +40,7 @@
 
     "managementDomain":[
     {
-        "name:":"blueplanet MCP",
+        "name":"blueplanet MCP",
         "id" : "A"
     },
     {
