Added another Management-Domain

--- a/config/generatorconfig.json
+++ b/config/generatorconfig.json
@@ -66,6 +66,10 @@
     {
         "name":"Arista-DC-Switching",
         "id":"E"
+    },
+    {
+        "name":"VCENTER-VDC",
+        "id":"F"
     }
     ],
     "serviceOwner":[
