--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "id-generator",
-  "version": "1.1.o",
+  "version": "1.1.0",
   "description": "Creates service-ids for services",
   "main": "server.js",
   "scripts": {
