--- a/config/generatorconfig.json
+++ b/config/generatorconfig.json
@@ -8,7 +8,7 @@
         "name":"Direkter Ciena LLDP-Link",
         "description":"Link zwischen direkt benachbarten Ciena Devices",
         "template":{
-            "serviceOwner":"WIT",
+            "serviceOwner":"ABC",
             "serviceType":"LINK",
             "md":"A"
         },
@@ -18,29 +18,9 @@
         "name":"Ciena MPLS-Tunnel",
         "description":"LSP zwischen Ciena-MPLS-Devices",
         "template":{
-            "serviceOwner":"WIT",
+            "serviceOwner":"ABC",
             "serviceType":"PATH",
             "md":"A"
-        },
-        "type":"IS"
-    },
-    {
-        "name":"Ciena Packet-Service",
-        "description":"E-Line, E-Tree, E-LAN Services",
-        "template":{
-            "serviceOwner":"WIT",
-            "serviceType":"CIRCUIT",
-            "md":"A"
-        },
-        "type":"IS"
-    },
-    {
-        "name":"ESWE Darkfibre",
-        "description":"DF-Strecke",
-        "template":{
-            "serviceOwner":"ESW",
-            "serviceType":"LL",
-            "md":"Y"
         },
         "type":"IS"
     }
@@ -72,10 +52,6 @@
     {
         "key": "LL"
 
-    },
-    {
-        "key": "SERVICEACCESS"
-
     }
     ],
 
@@ -85,58 +61,19 @@
         "id" : "A"
     },
     {
-        "name":"Übergreifend",
-        "id":"Z"
+        "name":"Mixed",
+        "id" : "Z"
     },
     {
-        "name":"EdgeGenie",
-        "id":"B"
-    },
-    {
-        "name":"Adva FSP-NM",
-        "id":"C"
-    },
-    {
-        "name":"SDH-Management",
-        "id":"D"
-    },
-    {
-        "name":"Unspezifiziert",
-        "id":"Y"
-    },
-    {
-        "name":"Arista-DC-Switching",
-        "id":"E"
-    },
-    {
-        "name":"VCENTER-VDC",
-        "id":"F"
+        "name":"Unspecified",
+        "id" : "Y"
     }
+
     ],
     "serviceOwner":[
     {
-        "name" : "WiTCOM",
-        "id": "WIT"
-    },
-    {
-        "name" : "Colt",
-        "id": "CLT"
-    },
-    {
-        "name" : "Verizon",
-        "id": "VRZ"
-    },
-    {
-        "name" : "Versatel",
-        "id": "VER"
-    },
-    {
-        "name" : "Vistec",
-        "id": "VIS"
-    },
-    {
-        "name" : "ESWE Versorgung",
-        "id": "ESW"
+        "name" : "ABC Company",
+        "id": "ABC"
     }
     ],
     "serviceType": [
@@ -188,13 +125,6 @@
         "sequenceKey": "SERVICE",
         "type": "CF-SERVICE",
         "prefixTemplate": "S-##SEQ##"
-    },
-    {
-        "name": "Service-Access",
-        "id": "SERVICEACCESS",
-        "sequenceKey": "SERVICEACCESS",
-        "type": "IS-SERVICE",
-        "prefixTemplate": "##OWNER##-SA##SEQ##"
     }
     ]
 }
