--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "cb",
   "license": "ISC",
   "dependencies": {
+    "@elastic/ecs-pino-format": "^0.1.0",
+    "@godaddy/terminus": "^4.4.1",
     "async-redis": "^1.1.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "keycloak-connect": "4.8.3",
+    "pino": "^6.7.0",
+    "pino-http": "^5.3.0",
     "redis": "^2.8.0",
     "swagger-jsdoc": "^3.7.0",
     "swagger-ui-express": "^4.1.4"
