--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "id-generator",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Creates service-ids for services",
   "main": "server.js",
   "scripts": {
@@ -11,8 +11,9 @@
   "author": "cb",
   "license": "ISC",
   "dependencies": {
+    "@cloudnative/health": "^2.1.2",
+    "@cloudnative/health-connect": "^2.1.0",
     "@elastic/ecs-pino-format": "^0.1.0",
-    "@godaddy/terminus": "^4.4.1",
     "async-redis": "^1.1.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
