--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "@cloudnative/health": "^2.1.2",
     "@cloudnative/health-connect": "^2.1.0",
     "@elastic/ecs-pino-format": "^0.1.0",
-    "async-redis": "^1.1.7",
+    "async-redis": "^2.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "keycloak-connect": "4.8.3",
+    "keycloak-connect": "^21.1.1",
     "pino": "^6.7.0",
     "pino-http": "^5.3.0",
-    "redis": "^2.8.0",
+    "redis": "^4.6.6",
     "swagger-jsdoc": "^3.7.0",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1",
     "webpack-node-externals": "^1.7.2"
   }
 }
