ci: Adds basic build-pipeline

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node ./server.js",
-    "build": "mkdir -p dist && rm -rf dist/* && cp -Rf app config node_modules package.json server.js dist/ && exit 0"
+    "build": "npm install && mkdir -p dist && rm -rf dist/* && cp -Rf app config node_modules package.json server.js dist/ && exit 0"
   },
   "author": "cb",
   "license": "ISC",
